--- a/app/blocks/form-elements/form-selects.scss
+++ b/app/blocks/form-elements/form-selects.scss
@@ -514,6 +514,10 @@
         width: 290px;
       }
     }
+
+    &.is-item-select:not(.is-readonly):not(.is-disabled) #{$k}__inner {
+      color: $color-basic-dark;
+    }
   }
 
   &_input {
