--- a/app/components/results/results.pug
+++ b/app/components/results/results.pug
@@ -1,3 +1,11 @@
 mixin results()
   +b.results&attributes(attributes)
     block
+
+mixin results-full()
+  +e.full&attributes(attributes)
+    block
+
+mixin results-short()
+  +e.short&attributes(attributes)
+    block
