--- a/app/pages/new-space/new-space-step7.pug
+++ b/app/pages/new-space/new-space-step7.pug
@@ -34,7 +34,7 @@ block content
             +space-info
               +grid.grid_layout
                 +col({ xl: 12, md: 6, sm: 12})
-                  +space-reserv('div', {img: "assets/images/space24.jpg", boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'TOG - Henry Wood House', location: 'W1W, London', heart2: { class: ''}})(href="#")._show-heart.__space
+                  +space-reserv('div', {img: "assets/images/space24.jpg", boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'TOG - Henry Wood House', location: 'W1W, London', heart2: { class: ''}})._show-heart.__space
                   +button-icon('a', 'preview')(href="#")._border._border_bg-white._preview._wide.__button View this space page preview
                 +col({ xl: 12, md: 6, sm: 12})
                   +space-info-text You can also get back to any of this sections in case of changing something:
