--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -17,4 +17,20 @@
       padding-top: 50px;
     }
   }
+
+  &_subnav {
+    padding-top: 185px;
+
+    @include screen('sm', max) {
+      padding-top: 144px;
+    }
+
+    &.is-short {
+      padding-top: 140px;
+
+      @include screen('sm') {
+        padding-top: 120px;
+      }
+    }
+  }
 }
