--- a/app/blocks/pagination/pagination.scss
+++ b/app/blocks/pagination/pagination.scss
@@ -31,6 +31,12 @@
     }
   }
 
+  &_md-centered {
+    @include screen('md') {
+      justify-content: center;
+    }
+  }
+
   &__item {
     display: block;
     box-sizing: border-box;
