--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -43,6 +43,26 @@
       margin-right: -5px;
       margin-left: -5px;
     }
+
+    &_lg {
+      @include screen('lg') {
+        width: calc(100% + 40px);
+        margin-right: -20px;
+        margin-left: -20px;
+      }
+
+      @include screen('md') {
+        width: calc(100% + 30px);
+        margin-right: -15px;
+        margin-left: -15px;
+      }
+
+      @include screen('sm') {
+        width: calc(100% + 10px);
+        margin-right: -5px;
+        margin-left: -5px;
+      }
+    }
   }
 
   &__column {
@@ -185,6 +205,23 @@
         padding-left: 5px;
         padding-right: 5px;
       }
+
+      #{$b}__wrapper_lg & {
+        @include screen('lg') {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+
+        @include screen('md') {
+          padding-left: 15px;
+          padding-right: 15px;
+        }
+
+        @include screen('md') {
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+      }
     }
 
     &_map {
@@ -195,6 +232,10 @@
       width: 41.67%;
       transition: width $ease-main, padding $ease-main;
 
+      @include screen('lg') {
+        width: 36.8%;
+      }
+
       @include screen('md') {
         padding-left: 15px;
         padding-right: 15px;
@@ -203,6 +244,23 @@
       @include screen('md') {
         padding-left: 5px;
         padding-right: 5px;
+      }
+
+      #{$b}__wrapper_lg & {
+        @include screen('lg') {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+
+        @include screen('md') {
+          padding-left: 15px;
+          padding-right: 15px;
+        }
+
+        @include screen('md') {
+          padding-left: 5px;
+          padding-right: 5px;
+        }
       }
 
       &.is-closed {
