--- a/app/components/results/results.scss
+++ b/app/components/results/results.scss
@@ -5,4 +5,10 @@
   width: 100%;
   box-sizing: border-box;
   padding-top: 15px;
+
+  &__full,
+  &__short {
+    display: block;
+    width: 100%;
+  }
 }
