--- a/app/pages/search-result/search-result.pug
+++ b/app/pages/search-result/search-result.pug
@@ -5,40 +5,47 @@ block head
 
 block header
   -var headerClass = '_border'
+  -var pageClass = '_subnav'
 
 block content
   -var spaces = getData('search-spaces.json')
+  -var spaces2 = getData('search-short-spaces.json')
   +search-filter
   +content-origin._reverse._last
     .container
-      +e.wrapper
+      +e.wrapper_lg
         +e.column_stretch
           +results
-            each item in spaces
-              +space-short('a')(href="#")
-                +space-short-side.hide-md(data-slot-id=item.id data-slot-res="xl")
-                +space-short-content
-                  +e.media-wrapper_lg.hide-from-md.hide-sm(data-slot-id=item.id data-slot-res="lg")
-                  +e.describe
-                    +address-line(item.adressLine).__adress
-                    +button-heart('div')._small._gray.__heart.js-heart
-                    +space-short-title!= item.title
-                    +e.media-wrapper_sm.hide-from-sm(data-slot-id=item.id data-slot-res="sm")
-                      +space-short-media()(data-target-slot=item.id)
-                        +slider-gallery-bold(true, false)._dark2._gallery_inner.js-slider-gallery.__gallery
-                          each slider in item.slider
-                            +e.IMG.slide.swiper-slide(src=slider)
-                    +space-short-text!= item.describe
-                  +space-short-offers
-                    each offer in item.offers
-                      +e.offer
-                        +offer-info('div', '', offer.price, '_small')(class="_short " + offer.status)
-                          +box(class="_size10 " + offer.box)
-                          +e.title_small._light-gray!= offer.name
-          +pagination._mgt32
-        +e.column_map(data-map="map")
+            +results-full.hide-md
+              each item in spaces
+                +space-short('a')(href="#")
+                  +space-short-side
+                    +space-short-media()
+                      +slider-gallery-bold(true, false)._dark2._gallery_inner.js-slider-gallery.__gallery
+                        each slider in item.slider
+                          +e.IMG.slide.swiper-slide(src=slider)
+                  +space-short-content
+                    +e.describe
+                      +address-line(item.adressLine).__adress
+                      +button-heart('div')._small._gray.__heart.js-heart
+                      +space-short-title!= item.title
+                      +space-short-text.js-line-clamp(data-max-line="2")!= item.describe
+                    +space-short-offers
+                      each offer in item.offers
+                        +e.offer
+                          +offer-info('div', '', offer.price, '_small')(class="_short " + offer.status)
+                            +box(class="_size10 " + offer.box)
+                            +e.title_small._light-gray!= offer.name
+            +results-short.hide-from-md
+              +grid.grid_layout
+                each item in spaces2
+                  +col({xl: 6, sm: 12})
+                    +space-reserv('a', item)(href="#")
+                    ._show-heart.__space
+          +pagination._mgt32._md-centered
+        +e.column_map(data-map="map").hide-md
           +sidebar._no-bg
-            +map._side#mapTwo
+            +map._side#searchMap
 
 block panels
   +main-menu
