--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -42,6 +42,18 @@
     }
   }
 
+  &_fz17 {
+    @include text-mid;
+
+    @include screen('sm') {
+      @include text16;
+    }
+  }
+
+  &_bold {
+    font-weight: 700;
+  }
+
   .is-error & {
     border-bottom-color: $color-error;
   }
@@ -65,567 +77,6 @@
   }
 }
 
-.checkradio {
-  $radio: &;
-
-  position: relative;
-  padding-left: 33px;
-  display: inline-block;
-  cursor: pointer;
-
-  &.is-disabled {
-    cursor: default;
-    pointer-events: none;
-  }
-
-  &__input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 0;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-
-    &:checked {
-
-      &+#{$radio}__box {
-        background-color: $color-basic;
-        border-color: $color-form-border-dark;
-
-        &::before {
-          opacity: 1;
-        }
-      }
-    }
-
-    &:disabled {
-
-      &+#{$radio}__box {
-        opacity: .51;
-      }
-    }
-  }
-
-  &__box {
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    border: 1px solid $color-form-border;
-    left: 0;
-    top: 50%;
-    border-radius: 50%;
-    transform: translate3d(0, -50%, 0);
-    transition: border $ease-main, background $ease-main, opacity $ease-main;
-
-    &::before {
-      content: '';
-      width: 10px;
-      height: 10px;
-      background-color: $color-white;
-      display: block;
-      opacity: 0;
-      transition: opacity $ease-main;
-      border-radius: 50%;
-
-      @include center-image;
-    }
-
-    #{$radio}:hover & {
-      border-color: $color-form-border-dark;
-      background-color: $color-basic;
-    }
-
-    #{$radio}.is-disabled & {
-      opacity: .51;
-    }
-  }
-
-  &__content {
-    @include text-big;
-
-    color: $color-basic;
-  }
-
-  &_small {
-    padding-left: 28px;
-
-    #{$radio}__box {
-      width: 13px;
-      height: 13px;
-
-      &::before {
-        width: 6px;
-        height: 6px;
-      }
-    }
-
-    #{$radio}__content {
-      @include text12;
-
-      line-height: (30/12);
-      letter-spacing: -.011em;
-    }
-  }
-
-  &_nobox {
-    padding-left: 0;
-
-    #{$radio}__input {
-      &:checked {
-
-        &~#{$radio}__content {
-          color: $color-basic-dark;
-        }
-      }
-    }
-
-    #{$radio}__box {
-      display: none;
-    }
-
-    #{$radio}__content {
-      transition: color $ease-main;
-    }
-
-    &:hover {
-      #{$radio}__content {
-        color: $color-basic-dark;
-      }
-    }
-  }
-
-  &_border {
-    padding-left: 0;
-
-    #{$radio}__box {
-      top: 6px;
-      transform: translate3d(0, 0, 0);
-
-      @include screen('sm') {
-        top: 3px;
-      }
-    }
-
-    #{$radio}__content {
-      padding-left: 33px;
-      border-bottom: 1px solid $color-form-border;
-      transition: border $ease-main;
-      padding-top: 3px;
-      padding-bottom: 10px;
-      box-sizing: border-box;
-
-      @include screen('sm') {
-        @include text;
-
-        line-height: 1.2;
-        padding-bottom: 12px;
-      }
-
-      .is-error & {
-        border-bottom-color: $color-error;
-      }
-    }
-
-    &:hover #{$radio}__content {
-      border-bottom-color: $color-basic;
-    }
-
-    input:checked~#{$radio}__content {
-      border-bottom-color: $color-basic;
-    }
-  }
-}
-
-.checkbox {
-  $check: &;
-
-  position: relative;
-  padding-left: 33px;
-  display: inline-block;
-  cursor: pointer;
-
-  &.is-disabled {
-    cursor: default;
-    pointer-events: none;
-  }
-
-  &__input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 0;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-
-    &:checked {
-
-      &+#{$check}__box {
-        background-color: $color-basic;
-        border-color: $color-form-border-dark;
-
-        #{$check}__icon {
-          opacity: 1;
-        }
-      }
-    }
-
-    &:disabled {
-
-      &+#{$check}__box {
-        opacity: .51;
-      }
-    }
-  }
-
-  &__box {
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    border: 1px solid $color-form-border;
-    left: 0;
-    top: 50%;
-    border-radius: 0;
-    transform: translate3d(0, -50%, 0);
-    transition: border $ease-main, background $ease-main, opacity $ease-main;
-    background-color: $color-bg;
-
-    #{$check}:hover & {
-      border-color: $color-form-border-dark;
-      background-color: $color-basic;
-    }
-
-    #{$check}.is-disabled & {
-      opacity: .51;
-    }
-  }
-
-  &__icon {
-    position: absolute;
-    top: 3px;
-    left: 3px;
-    font-size: 0;
-    line-height: 0;
-    width: 14px;
-    height: 12px;
-    fill: $color-white;
-    opacity: 0;
-    transition: opacity $ease-main;
-  }
-
-  &__content {
-    @include text-big;
-
-    color: $color-basic;
-  }
-
-  &_small {
-    padding-left: 28px;
-
-    #{$check}__box {
-      width: 13px;
-      height: 13px;
-    }
-
-    #{$check}__icon {
-      width: 12px;
-      height: 10px;
-      top: 1px;
-      left: 1px;
-    }
-
-    #{$check}__content {
-      @include text12;
-
-      line-height: (30/12);
-      letter-spacing: -.011em;
-    }
-  }
-
-  &_inverse {
-    padding-left: 0;
-    padding-right: 28px;
-
-    #{$check}__box {
-      left: auto;
-      right: 0;
-    }
-  }
-
-  &_border {
-    padding-left: 0;
-
-    #{$check}__box {
-      top: 6px;
-      transform: translate3d(0, 0, 0);
-
-      @include screen('sm') {
-        top: 3px;
-      }
-    }
-
-    #{$check}__content {
-      padding-left: 33px;
-      border-bottom: 1px solid $color-form-border;
-      transition: border $ease-main;
-      padding-top: 3px;
-      padding-bottom: 10px;
-      box-sizing: border-box;
-
-      @include screen('sm') {
-        @include text;
-
-        line-height: 1.2;
-        padding-bottom: 12px;
-      }
-    }
-
-    &:hover #{$check}__content {
-      border-bottom-color: $color-basic;
-    }
-
-    input:checked~#{$check}__content {
-      border-bottom-color: $color-basic;
-    }
-  }
-}
-
-// #####
-// Радио кнопки в виде цветных границ
-// #####
-
-.color-radio {
-  $b: &;
-
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  color: $color-white;
-
-  &_dark {
-    color: $color-basic;
-  }
-
-  &__input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 0;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-  }
-
-  &__content {
-    @include text-mid;
-
-    font-weight: 700;
-    border: 2px solid transparent;
-    transition: all $ease-main;
-    border-radius: 3px;
-    padding: 0 5px;
-    line-height: (26/17);
-    position: relative;
-    display: inline-block;
-
-    @include screen('md') {
-      @include heading-4;
-
-      line-height: (26/20);
-    }
-
-    #{$b}:hover & {
-      border-color: $color-hot-desk;
-    }
-
-    #{$b}__input:checked~& {
-      border-color: $color-hot-desk;
-    }
-
-    &::before {
-      @include pseudo;
-
-      top: 100%;
-      left: 5px;
-      width: calc(100% - 10px);
-      height: 2px;
-      background-color: $color-hot-desk;
-    }
-  }
-
-  &_orange {
-
-    #{$b}__content::before {
-      background-color: $color-hot-desk;
-    }
-
-    &:hover #{$b}__content {
-      border-color: $color-hot-desk;
-    }
-
-    #{$b}__input:checked~#{$b}__content {
-      border-color: $color-hot-desk;
-    }
-  }
-
-  &_red {
-
-    #{$b}__content::before {
-      background-color: $color-dedicated-desk;
-    }
-
-    &:hover #{$b}__content {
-      border-color: $color-dedicated-desk;
-    }
-
-    #{$b}__input:checked~#{$b}__content {
-      border-color: $color-dedicated-desk;
-    }
-  }
-
-  &_blue {
-    #{$b}__content::before {
-      background-color: $color-meeting-room;
-    }
-
-    &:hover #{$b}__content {
-      border-color: $color-meeting-room;
-    }
-
-    #{$b}__input:checked~#{$b}__content {
-      border-color: $color-meeting-room;
-    }
-  }
-
-  &_green {
-    #{$b}__content::before {
-      background-color: $color-office-space;
-    }
-
-    &:hover #{$b}__content {
-      border-color: $color-office-space;
-    }
-
-    #{$b}__input:checked~#{$b}__content {
-      border-color: $color-office-space;
-    }
-  }
-
-  &_full {
-    #{$b}__content {
-      border-color: transparent;
-      border-radius: 0;
-
-      &::before {
-        transition: background $ease-main;
-        background-color: rgba($color-white, .8);
-      }
-    }
-
-
-    &:hover {
-      color: rgba($color-white, .8);
-
-      #{$b}__content {
-        border-color: transparent;
-
-        &::before {
-          background-color: $color-white;
-        }
-      }
-    }
-
-    #{$b}__input:checked~#{$b}__content {
-      border-color: $color-white;
-      background-color: $color-white;
-      color: $color-basic;
-
-      &::before {
-        background-color: $color-white;
-      }
-    }
-
-    &#{$b}_dark {
-      border-color: transparent;
-
-      #{$b}__content {
-
-        &::before {
-          background-color: $color-form-border;
-        }
-      }
-
-      &:hover {
-        color: $color-radio-dark-hover;
-
-        #{$b}__content {
-
-          &::before {
-            background-color: $color-basic;
-          }
-        }
-      }
-
-      #{$b}__input:checked~#{$b}__content {
-        border-color: transparent;
-        background-color: $color-basic;
-        color: $color-white;
-
-        &::before {
-          background-color: $color-basic;
-        }
-      }
-    }
-
-    &#{$b}_big {
-
-      #{$b}__content {
-
-        &::before {
-          top: auto;
-          bottom: 3px;
-
-          @include screen('sm') {
-            bottom: 1px;
-          }
-        }
-      }
-    }
-  }
-
-  &_big {
-    text-align: center;
-
-    #{$b}__content {
-      @include heading-3;
-
-      line-height: 1.2;
-      padding: 4px 10px;
-      font-weight: 700;
-
-      @include screen('sm') {
-        @include heading-4;
-
-        line-height: 1.2;
-        padding: 2px 7px;
-      }
-
-      &::before {
-        left: 10px;
-        width: calc(100% - 20px);
-
-        @include screen('sm') {
-          left: 7px;
-          width: calc(100% - 14px);
-        }
-      }
-    }
-  }
-}
 
 // #####
 // Блок выбора количества
@@ -792,54 +243,6 @@
         transform: translate3d(-50%, -50%, 0) rotate(90deg);
       }
     }
-  }
-}
-
-// #####
-// Range-слайдер
-// #####
-
-.range {
-  display: inline-block;
-  width: 100%;
-}
-
-.range .noUi {
-
-  &-base {
-    height: 2px;
-    background-color: $color-border;
-    position: relative;
-    margin: 8px 0; // margin нужен, чтобы handler не налезал на другие элементы
-  }
-
-  &-connect {
-    height: 100%;
-    position: absolute;
-    background-color: $color-main;
-  }
-
-  &-handle {
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    top: 50%;
-    border: 1px solid $color-border;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    background-color: white;
-    transition: border-color $ease-main;
-    cursor: pointer;
-
-    &:hover {
-      border-color: $color-main;
-    }
-  }
-
-  &-origin {
-    position: absolute;
-    top: 0;
-    height: 100%;
   }
 }
 
