--- a/app/blocks/form-panel/form-panel.scss
+++ b/app/blocks/form-panel/form-panel.scss
@@ -50,11 +50,27 @@
         min-width: 0;
       }
     }
+
+    &_w360 {
+      min-width: 360px;
+
+      @include screen('sm') {
+        min-width: 0;
+      }
+    }
   }
 
   &__link {
     &:not(:last-child) {
       margin-right: 20px;
+    }
+  }
+
+  &_pd0 {
+    padding: 19px 0;
+
+    @include screen('sm') {
+      padding: 14px 0;
     }
   }
 
