--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -21,6 +21,25 @@
   &_side {
     height: calc(100vh - 140px);
     width: 100%;
+
+    @include screen('md') {
+      transition: height $ease-main;
+      height: calc(100vh - 185px);
+    }
+
+    @include screen('sm') {
+      height: calc(100vh - 144px);
+    }
+
+    .page.is-short & {
+      @include screen('md') {
+        height: calc(100vh - 140px);
+      }
+
+      @include screen('sm') {
+        height: calc(100vh - 120px);
+      }
+    }
   }
 }
 
