--- a/app/blocks/offer-info/offer-info.scss
+++ b/app/blocks/offer-info/offer-info.scss
@@ -170,6 +170,18 @@
 
       line-height: 1;
     }
+
+    &_light {
+
+      #{$b}__title {
+        color: $color-basic-light;
+      }
+
+      #{$b}__price {
+        font-weight: 400;
+        color: $color-basic-light;
+      }
+    }
   }
 
   &_light {
