--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -201,7 +201,7 @@
         padding-right: 15px;
       }
 
-      @include screen('md') {
+      @include screen('sm') {
         padding-left: 5px;
         padding-right: 5px;
       }
@@ -217,7 +217,7 @@
           padding-right: 15px;
         }
 
-        @include screen('md') {
+        @include screen('sm') {
           padding-left: 5px;
           padding-right: 5px;
         }
@@ -225,25 +225,17 @@
     }
 
     &_map {
-      display: block;
-      box-sizing: border-box;
+      width: 41.67%;
       padding-left: 25px;
       padding-right: 25px;
-      width: 41.67%;
-      transition: width $ease-main, padding $ease-main;
 
       @include screen('lg') {
         width: 36.8%;
       }
 
       @include screen('md') {
-        padding-left: 15px;
-        padding-right: 15px;
-      }
-
-      @include screen('md') {
-        padding-left: 5px;
-        padding-right: 5px;
+        padding-left: 0;
+        padding-right: 0;
       }
 
       #{$b}__wrapper_lg & {
@@ -253,20 +245,9 @@
         }
 
         @include screen('md') {
-          padding-left: 15px;
-          padding-right: 15px;
+          padding-left: 0;
+          padding-right: 0;
         }
-
-        @include screen('md') {
-          padding-left: 5px;
-          padding-right: 5px;
-        }
-      }
-
-      &.is-closed {
-        width: 0;
-        padding-left: 0;
-        padding-right: 0;
       }
     }
 
