--- a/app/components/results/results.scss
+++ b/app/components/results/results.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
   padding-top: 15px;
 
+  @include screen('md') {
+    padding-top: 43px;
+  }
+
   &__full,
   &__short {
     display: block;
