--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -54,6 +54,7 @@ include ../blocks/link/link
 include ../blocks/lists/lists
 include ../blocks/logo/logo
 include ../blocks/long-arrow/long-arrow
+include ../blocks/map-switch/map-switch
 include ../blocks/map/map
 include ../blocks/message-form/message-form
 include ../blocks/message/message
@@ -107,12 +108,14 @@ include ../blocks/tabs/tabs
 include ../blocks/text-list/text-list
 include ../blocks/time/time
 include ../blocks/tip/tip
+include ../blocks/toggle/toggle
 include ../blocks/transport-table/transport-table
 include ../blocks/transport-type/transport-type
 include ../blocks/travel-time/travel-time
 include ../blocks/uploader-output/uploader-output
 include ../blocks/uploader/uploader
 include ../blocks/user-link/user-link
+include ../components/advanced-filter/advanced-filter
 include ../components/breadcrumbs-box/breadcrumbs-box
 include ../components/compact-filter/compact-filter
 include ../components/condition-search/condition-search
@@ -135,6 +138,7 @@ include ../components/popup-signin/popup-signin
 include ../components/popup-subscribe/popup-subscribe
 include ../components/results/results
 include ../components/search-filter/search-filter
+include ../components/search-map/search-map
 include ../components/side-navigation/side-navigation
 include ../components/space-info/space-info
 include ../components/space-offer/space-offer
