--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -136,6 +136,8 @@ $color-text-gray: #989fa8;
 $color-text-gray2: #cbd1d8;
 $color-text-gray3: #707a86;
 $color-title-dark: #2d333b;
+$color-range-track: #ececec;
+$color-range-handler-active: #434b57;
 
 // ##########
 // Transitions
