--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -66,6 +66,18 @@
       }
     }
 
+    &_mg50 {
+      &:not(:last-of-type) {
+        margin-bottom: 50px;
+      }
+    }
+
+    &_mg52 {
+      &:not(:last-of-type) {
+        margin-bottom: 52px;
+      }
+    }
+
     &_mg65 {
       &:not(:last-of-type) {
         margin-bottom: 65px;
@@ -96,8 +108,35 @@
       }
     }
 
+    &_pb {
+      padding-bottom: 57px;
+    }
+
+    &_pb46 {
+      padding-bottom: 46px;
+    }
+
+    &_pb72 {
+      padding-bottom: 72px;
+    }
+
     &_mta {
       margin-top: auto;
+    }
+
+    &_underline {
+      position: relative;
+
+      &::after {
+        @include pseudo;
+
+        top: 100%;
+        left: 50%;
+        width: calc(100% + 100px);
+        height: 1px;
+        background-color: $color-border-light;
+        transform: translate3d(-50%, 0, 0);
+      }
     }
   }
 
@@ -161,12 +200,20 @@
       }
     }
 
+    &_mg40 {
+      margin-bottom: 40px;
+    }
+
     &_mg46 {
       margin-bottom: 46px;
 
       @include screen('sm') {
         margin-bottom: 56px;
       }
+    }
+
+    &_mg47 {
+      margin-bottom: 47px;
     }
 
     &_mg49 {
@@ -231,6 +278,12 @@
 
       @include screen('sm') {
         margin-bottom: 14px;
+      }
+    }
+
+    &_mg0 {
+      &:not(:last-child) {
+        margin-bottom: 0;
       }
     }
 
@@ -327,6 +380,10 @@
 
     &_dark {
       color: $color-basic;
+    }
+
+    &_mg-2 {
+      margin-top: -2px;
     }
   }
 
@@ -462,6 +519,11 @@
         top: -5px;
       }
     }
+
+    &_w368 {
+      width: 368px;
+      max-width: 100%;
+    }
   }
 
   &__panel {
@@ -506,6 +568,10 @@
 
     &_border {
       border-top: 1px solid $color-border-lightest;
+    }
+
+    &_mgt-10 {
+      margin-top: -10px;
     }
   }
 
@@ -842,6 +908,42 @@
       @include screen('md') {
         flex: none;
         width: 100%;
+      }
+    }
+  }
+
+  &__list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    margin-top: -11px;
+
+    &_line {
+      box-sizing: border-box;
+      padding: 0 4px;
+    }
+  }
+
+  &__item {
+    display: inline-block;
+    width: auto;
+    margin-top: 11px;
+
+    #{$b}__list_columns & {
+      width: 230px;
+      margin-right: 30px;
+
+      @include screen('sm') {
+        width: 100%;
+      }
+    }
+
+    #{$b}__list_line & {
+
+      &:not(:last-child) {
+        margin-right: 59px;
       }
     }
   }
