--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -110,6 +110,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     margin-top: -10px;
   }
 
+  &_int48 {
+    margin-top: -48px;
+  }
+
   &_reserv {
     margin-top: -60px;
   }
@@ -269,6 +273,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
     #{$b}_int10 & {
       padding-top: 10px;
+    }
+
+    #{$b}_int48 & {
+      padding-top: 48px;
     }
 
     #{$b}_mid & {
