--- a/app/blocks/pagination/pagination.scss
+++ b/app/blocks/pagination/pagination.scss
@@ -17,8 +17,8 @@
     &:not(:first-child) {
       margin-top: 32px;
 
-      @include screen('sm') {
-        margin-top: 30px;
+      @include screen('md') {
+        margin-top: 114px;
       }
     }
   }
