--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -44,6 +44,7 @@ include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
 include ../blocks/header-user/header-user
 include ../blocks/heading/heading
+include ../blocks/hide-button/hide-button
 include ../blocks/hint/hint
 include ../blocks/icon/icon
 include ../blocks/indicator/indicator
