--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -182,6 +182,21 @@
     }
   }
 
+  &__offer {
+    display: block;
+    width: 100%;
+    margin-top: 5px;
+
+    .offer-info {
+
+      &__title {
+        &:not(:last-child) {
+          margin-right: 4px;
+        }
+      }
+    }
+  }
+
   &_around {
     #{$b}__boxes {
       min-height: 9px;
@@ -211,6 +226,48 @@
       @include screen('sm') {
         top: 13px;
         right: 12px;
+      }
+    }
+  }
+
+  &_map {
+
+    #{$b} {
+      &__boxes {
+        margin-top: 6px;
+        margin-bottom: 10px;
+      }
+
+      &__heart {
+        top: 12px;
+        right: 10px;
+      }
+
+      &__title {
+        @include text-mid;
+
+        line-height: 1.2;
+
+        @include screen('sm') {
+          @include text15;
+
+          line-height: 1.2;
+        }
+      }
+
+      &__location {
+        @include text15;
+
+        font-weight: 400;
+        line-height: 1.2;
+
+        @include screen('sm') {
+          @include text12;
+        }
+      }
+
+      &__offer {
+        margin-top: 2px;
       }
     }
   }
